--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
     padding: 0 42px;
     border-radius: 5px;
     text-align: center;
+    text-transform: uppercase;
 }
 
 .meaning-container {
